[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/vcr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/ui-skin/default/hpbar.png" type="Texture" id=2]
[ext_resource path="res://assets/images/char-icons/bf.png" type="Texture" id=3]
[ext_resource path="res://assets/images/char-icons/dad.png" type="Texture" id=4]
[ext_resource path="res://source/gameplay/gameplay.gd" type="Script" id=5]
[ext_resource path="res://source/gameplay/cam.gd" type="Script" id=6]
[ext_resource path="res://source/gameplay/combo.gd" type="Script" id=7]
[ext_resource path="res://source/gameplay/combo-counter.gd" type="Script" id=8]
[ext_resource path="res://source/gameplay/pause.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 21
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Gameplay" type="Node2D"]
script = ExtResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 10
offset = Vector2( 640, 360 )
transform = Transform2D( 1, 0, 0, 1, 640, 360 )

[node name="Strums" type="Node2D" parent="UI"]

[node name="Countdown" type="Sprite" parent="UI"]

[node name="HpBar" type="TextureProgress" parent="UI"]
margin_left = -300.5
margin_top = 298.0
margin_right = 300.5
margin_bottom = 317.0
step = 0.001
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 1

[node name="Icons" type="Node2D" parent="UI/HpBar"]
position = Vector2( 300.5, 10 )

[node name="Left" type="Sprite" parent="UI/HpBar/Icons"]
position = Vector2( -48, 0 )
texture = ExtResource( 4 )
hframes = 2

[node name="Right" type="Sprite" parent="UI/HpBar/Icons"]
position = Vector2( 48, 0 )
texture = ExtResource( 3 )
flip_h = true
hframes = 2

[node name="ScoreLabel" type="RichTextLabel" parent="UI"]
margin_left = -640.0
margin_top = 327.0
margin_right = 640.0
margin_bottom = 353.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]N/A"
text = "N/A"
fit_content_height = true
scroll_active = false

[node name="SicksLabel" type="RichTextLabel" parent="UI"]
margin_left = -632.0
margin_top = -42.0
margin_bottom = 192.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "N/A"
text = "N/A"
scroll_active = false

[node name="Pause" parent="." instance=ExtResource( 9 )]
layer = 11

[node name="Inst" type="AudioStreamPlayer" parent="."]

[node name="Voices" type="AudioStreamPlayer" parent="."]

[node name="Combo" type="Sprite" parent="."]
position = Vector2( 638, 359 )
script = ExtResource( 7 )

[node name="Counter" type="Node2D" parent="Combo"]
script = ExtResource( 8 )

[node name="Cam" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
rotating = true
current = true
script = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]
